--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<div id="input-container">
   <div id="toon-buttons">
 
   </div>
@@ -20,6 +21,7 @@
 
     <input id="add-toon" type="submit" value="Submit">
   </form>
+</div>
 
 
   <div id="toons">
